--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Jewelry</title>
-	<link rel="stylesheet" href="assets/fonts/font-awesome/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
 </head>
 <body>
-	<header>
+	<header class="main-header">
 		<div class="wrapper">
 			<div class="main-navigation">
-				<div class="logo">
-					<a href="#">Jewelry</a>
+				<div>
+					<a class="logo" href="#">Jewelry</a>
+				</div>
+				<div class="header-socials">
+					<a href="#">&#76;</a>
+					<a href="#">&#70;</a>
 				</div>
 				<nav>
 					<ul>
@@ -31,10 +34,6 @@
 						</li>
 					</ul>
 				</nav>
-				<div class="header-socials">
-					<a href="#">&#76;</a>
-					<a href="#">&#70;</a>
-				</div>
 			</div>
 			<div class="header-banner">
 				<p>Creating realistic</p>
@@ -44,100 +43,275 @@
 			</div>
 		</div>
 	</header>
-	<main>
+	<main>    
 		<section class="history">
 			<div class="wrapper">
 				<h2>Our Interesting History</h2>
-				<p>
-					Science in the media always seems to be very one-sided. News media chasing sensations and much has been written about the research, "British scientists" and the low probability, but high-profile discoveries, which may take place in the future, not only paying attention to really important things. In addition, the Internet, magazines and television are often held discussions on the "loud" 
-				</p>
-				<p>
-					Science in the media always seems to be very one-sided. News media chasing sensations and much has been written about the research, "British scientists" and the low probability, but high-profile discoveries, which may take place in the future, not only paying attention to really important things. In addition, the Internet, magazines and television are often held discussions on the "loud" 
-				</p>
+		        <div class="history__content">
+				     <p>
+					      Science in the media always seems to be very one-sided. News media chasing sensations and much has been written about the research, "British scientists" and the low probability, but high-profile discoveries, which may take place in the future, not only paying attention to really important things. In addition, the Internet, magazines and television are often held discussions on
+				     </p>
+				     <p>
+					      Science in the media always seems to be very one-sided. News media chasing sensations and much has been written about the research, "British scientists" and the low probability, but high-profile discoveries, which may take place in the future, not only paying attention to really important things. In addition, the Internet, magazines and television are often held discussions on
+				     </p>
+				</div>
 			</div>
 		</section>
 		<section class="schematic">
-			<div class="schematic__title">
-				<h2>How Does It Work</h2>
-				<p>
-					You can ask your question by filling in the form
-				</p>
-				<p>
-					Callback
-				</p>
-			</div>
-			<section class="schematic__list">
-				<article class="schematic__item">
-					<p>
-						Select a piece of jewelry that you like.
-					</p>
-					<p>
-						You can choose your size, decoration material (silver, gold)
-					</p>
-				</article>
-				<article class="schematic__item">
-					<p>
-						Make decoration unique.
-					</p>
-					<p>
-						You can write a variety of phrases, change shape, and even adjust the polishing.
-					</p>
-				</article>
-				<article class="schematic__item">
-					<p>
-						Payment methods chosen decorations.
-					</p>
-					<p>
-						You can use a credit card, and other convenient for you.
-					</p>
-				</article>
-				<article class="schematic__item">
-					<p>
-						Above decoration will be ready within 3-7 days.
-					</p>
-					<p>
-						On this site you can choose the most convenient way for delivery.
-					</p>
-				</article>
-				<article class="schematic__item">
-					<p>
-						You have successfully passed all the menu items.
-					</p>
-					<p>
-						We beautifully pack and deliver your decoration in our signature box.
-					</p>
-				</article>
-				<article class="schematic__item">
-					<p>
-						Wear purchased item with pleasure.	
-					</p>
-					<p>
-						As credit cards, and other convenient for you.
-					</p>
-				</article>
+		    <div class="wrapper">
+			    <div class="schematic__title">
+				    <h2>How Does It Work</h2>
+				    <svg width="72" height="10" class="waves">
+                        <polyline points="0,10 6,0 12,10 18,0 24,10 30 0 36,10 42,0 48,10, 54,0 60,10 66,0 72,10"
+                        fill="none" stroke="#bdbdbd" stroke-width="1" />
+                    </svg>
+				    <p>
+					    You can ask your question by filling in the form
+				    </p>
+		    		<p>
+					    Callback
+			    	</p>
+			    </div>
+		    	<div class="schematic__list">  
+				    <article class="schematic__item">
+					    <p>
+						    Select a piece of jewelry that you like.
+					    </p>
+					    <p>
+						    You can choose your size, decoration material (silver, gold)
+				    	</p>
+				    </article>
+				    <article class="schematic__item">
+				    	<p>
+					    	Make decoration unique.
+					    </p>
+					    <p>
+						    You can write a variety of phrases, change shape, and even adjust the polishing.
+					    </p>
+				    </article>
+				    <article class="schematic__item">
+					    <p>
+					    	Payment methods chosen decorations.
+				    	</p>
+					    <p>
+				    		You can use a credit card, and other convenient for you.
+					    </p>
+				    </article>
+				    <article class="schematic__item">
+					    <p>
+					    	Above decoration will be ready within 3-7 days.
+					    </p>
+					    <p>
+					    	On this site you can choose the most convenient way for delivery.
+					    </p>
+				    </article>
+				    <article class="schematic__item">
+				    	<p>
+				    		You have successfully passed all the menu items.
+				    	</p>
+				    	<p>
+				    		We beautifully pack and deliver your decoration in our signature box.
+				    	</p>
+				    </article>
+				    <article class="schematic__item">
+				    	<p>
+				    		Wear purchased item with pleasure.	
+					    </p>
+					    <p>
+					    	As credit cards, and other convenient for you.
+					    </p>
+				    </article>
+                </div>    
 			</div>
 		</section>
 		<section class="slider">
 			<div class="wrapper">
 				<article class="slider__item">
-					<img class="slider__photo" src="" alt="">
+					<img class="slider__photo" src="assets/img/slider-photo.jpg" alt="slider-photo">
 					<div class="slider__description">
 						<h2>Mercury</h2>
+						<svg width="72" height="10" class="waves">
+                            <polyline points="0,10 6,0 12,10 18,0 24,10 30 0 36,10 42,0 48,10, 54,0 60,10 66,0 72,10"
+                            fill="none" stroke="#bdbdbd" stroke-width="1" />
+                        </svg>
 						<p>
 							Movie buff Tony Chou (Tony Zhou) published in his Vimeo video review with an analysis of the demonstration set of SMS and other text messages in modern cinema.
 						</p>
-						<a class="btn" href="#">Learn more</a>
+						<a class="btn" href="">Learn more</a>
 					</div>
 				</article>
+				<button class="slider__button btn-prev" type="button"></button>
+				<button class="slider__button btn-next" type="button"></button>
 			</div>
 		</section>
 		<section class="advantages">
-			<div class="advantages__block">
-				<p>Why Choose We?</p>
-				<div class="advantages__list"></div>
+		    <div class="wrapper">
+			    <div class="advantages__container">
+				    <h2>Why Choose We?</h2>
+				    <div class="advantages__list">
+				        <div class="advantages__item">
+				            <h4>Simplicity</h4>
+				            <p>
+				                You will not see our jewelry set rhinestones, huge rocks and massive detalley - we appreciate the simplicity.
+				            </p>
+				        </div>
+				        <div class="advantages__item">
+				            <h4>Handmade</h4>
+				            <p>
+				                All our decorations - handmade and each of them we put a piece of the soul and the long hours of hard work.
+				            </p>
+				        </div>
+				        <div class="advantages__item">
+				            <h4>The uniqueness</h4>
+				            <p>
+				                Do you and your friend will never be the same decorations - all our jewelery is unique.
+				            </p>
+				        </div>
+				        <div class="advantages__item">
+				            <h4>Trust</h4>
+				            <p>
+				                From the outset, we are building a relationship of trust with our customers.
+				            </p>
+				        </div>
+				    </div>
+			    </div>
+			    <div class="advantages__gallery">
+			        <img src="assets/img/photo-galllery-1.jpg" width="235" height="235" alt="ring-1">
+			        <img src="assets/img/photo-galllery-2.jpg" alt="ring2" width="235" height="235">
+			        <img src="assets/img/photo-galllery-3.jpg" alt="ring3" width="235" height="235">
+			        <img src="assets/img/photo-galllery-4.jpg" alt="ring-4" width="235" height="235">
+			        <img src="assets/img/photo-galllery-5.jpg" alt="ring-5" width="235" height="235">
+			        <img src="assets/img/photo-galllery-6.jpg" alt="ring-6" width="235" height="235">
+			        <h2>
+			          Our Jewelry
+			            <svg width="72" height="10" class="waves">
+                            <polyline points="0,10 6,0 12,10 18,0 24,10 30 0 36,10 42,0 48,10, 54,0 60,10 66,0 72,10"
+                            fill="none" stroke="#bdbdbd" stroke-width="1" />
+                        </svg>
+			        </h2>
+			    </div>
+			    <div class="advantages__description">
+			        <p>
+			            As with any other phase of the project, this stage should also be assessed at all stages and in any way possible. The more you study this stage, the better you understand your users, the reasons for which they leave or stay, and this information will increase the number of the latter. Below you will find 21 tips for organizing user activation, which will help 
+			        </p>
+			        <p>
+			            As with any other phase of the project, this stage should also be assessed at all stages and in any way possible. The more you study this stage, the better you understand your users, the reasons for which they leave or stay, and this information will increase the number of the latter. Below you will find 21 tips for organizing user activation, which will help 
+			        </p>
+			    </div> 
 			</div>
-			<div class="advantages-gallery"></div>
+		</section>
+		<section class="reviews">
+		    <div class="wrapper">
+		        <h2>
+		            Comments From Our Customers
+		            <svg width="72" height="10" class="waves">
+                        <polyline points="0,10 6,0 12,10 18,0 24,10 30 0 36,10 42,0 48,10, 54,0 60,10 66,0 72,10"
+                        fill="none" stroke="#bdbdbd" stroke-width="1" />
+                    </svg>
+		        </h2>
+		        <p>You can ask your question by filling in the form Callback</p>
+		        <div class="reviews__list">
+		            <div class="reviews__item">
+		                <p>Paul Demichev</p>
+		                <p>Web Designer</p>
+		                <p>
+		                    When making such important decisions as the conclusion of   the wage project, it is important to simultaneously run a number of conditions.
+		                </p>
+		            </div>
+		            <div class="reviews__item">
+		                <p>Oleg Topanic</p>
+		                <p>Программист</p>
+		                <p>
+		                    This is a Bank that we trust. Our history of working with Alfa-Bank has about 15 years. We have almost from the base
+		                </p>
+		            </div>
+		            <div class="reviews__item">
+		                <p>Julia Usina</p>
+		                <p>Повар</p>
+		                <p>
+		                    In 2010, we came to the conclusion that we need a payroll project. Naturally, we considered the offers of different banks
+		                </p>
+		            </div>
+		            <div class="reviews__item">
+		                <p>Serdyuk Elena</p>
+		                <p>Студентка</p>
+		                <p>
+		                    In 2010, we came to the conclusion that we need a payroll project. Naturally, we considered the offers of different banks
+		                </p>
+		            </div>
+		            <div class="reviews__item">
+		                <p>Kulikov Vlad</p>
+		                <p>Главный механик</p>
+		                <p>
+		                    When making such important decisions as the conclusion of the wage project, it is important to simultaneously run a number of conditions.
+		                </p>
+		            </div>
+		            <div class="reviews__item">
+		                <p>Andrey Tikhonov</p>
+		                <p>Сварщик</p>
+		                <p>
+		                    This is a Bank that we trust. Our history of working with Alfa-Bank has about 15 years. We have almost from the base
+		                </p>
+		            </div>
+		        </div>    
+		    </div>
+		</section>
+		<section class="photoblog">
+		    <div class="wrapper">
+		        <div class="photoblog__gallery">
+		            <img src="assets/img/photoblog-1.jpg" alt="photo-1" width="235" height="235">
+		            <img src="assets/img/photoblog-2.jpg" alt="photo-2" width="235" height="235">
+		            <img src="assets/img/photoblog-3.jpg" alt="photo-3" width="235" height="235">
+		            <img src="assets/img/photoblog-4.jpg" alt="photo-4" width="235" height="235">
+		            <img src="assets/img/photoblog-5.jpg" alt="photo-5" width="235" height="235">
+		            <img src="assets/img/photoblog-6.jpg" alt="photo-6" width="235" height="235">
+		            <h2>
+		                Our <br>Photoblog
+		                <svg width="72" height="10" class="waves">
+                            <polyline points="0,10 6,0 12,10 18,0 24,10 30 0 36,10 42,0 48,10, 54,0 60,10 66,0 72,10"
+                            fill="none" stroke="#bdbdbd" stroke-width="1" />
+                        </svg>
+		            </h2>
+		        </div>
+		        <div class="photoblog__content">
+		            <p>
+		                Like any other phase of the project, this phase should also be assessed at all stages and in any way. The more you study this stage, the better you understand your users, the reasons for which they leave or stay, and this information will allow to increase the number of the latter. Below you will find 21 Council for organizing activated users that will help 
+		            </p>
+		            <p>
+		                Like any other phase of the project, this phase should also be assessed at all stages and in any way. The more you study this stage, the better you understand your users, the reasons for which they leave or stay, and this information will allow to increase the number of the latter. Below you will find 21 Council for organizing activated users that will help 
+		            </p>
+		        </div>
+		    </div>
 		</section>
 	</main>
+	<footer>
+	    <div class="wrapper">
+	        <header class="footer__header">
+	            <a class="logo" href="#">Jewelry</a>
+	            <div class="footer__socials">
+	                <a href="#">&#70;</a>
+	                <a href="#" >&#76;</a>
+	                <a href="#">&#68;</a>
+	                <a href="#">&#71;</a>
+	            </div>
+	        </header>
+	        <div class="footer__main">
+                <div class="footer__info-first">
+                    <a href="#">Production time</a>
+                    <a href="#">Questions and answers</a>
+                    <a href="#">Payment methods</a>
+                </div>
+                <div class="footer__info-second">
+                    <a href="#">Shipping information</a>
+                    <a href="#">Feedback</a>
+                    <a href="#">User agreement</a>
+                </div>
+                <div class="copyright">
+                    <p>Copyright &copy; 2014. Softline.</p>
+                    <p>All rights reserved.</p>
+                </div>
+	        </div>
+	    </div>
+	</footer>
 </body>
 </html>
